# umath

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
bench/: dummybench.cpp  vec2_benchmark.cpp
cmake/: CompilerWarnings.cmake  FindGTest.cmake
docs/: CMakeLists.txt
examples/: example1.cpp  lib_umath_angle_conversions.cpp  lib_umath_basic_arithmetic.cpp  lib_umath_error_handling.cpp  lib_umath_exponential_logarithm.cpp  lib_umath_fast_operations.cpp  lib_umath_financial_calculations.cpp  lib_umath_floating_point_utilities.cpp  lib_umath_integer_operations.cpp  lib_umath_precision_functions.cpp  lib_umath_rounding_functions.cpp  lib_umath_special_values.cpp  lib_umath_trigonometry.cpp
include/umath/: traits.hpp  umath.hpp  vec2.hpp
src/: CMakeLists.txt  main.cpp  umath.cpp
test/: CMakeLists.txt  dumy.cpp  test_vec2.cpp  umath_test.cpp  umath_test_vec2.cpp
